# 99problems

./: 99problems.cabal  Capstone02.hs  Capstone03.hs  Draft.hs  Exercise.hs  Glitch.hi  Glitch.hs  README.md  Solutions.hs  Solutions01.hs  Solutions02.hs  Solutions03.hs  Solutions04.hs  books.html  glitch
src/99/: Solutions01.hs  Solutions04.hs  Solutions05.hs
src/capstone/: Capstone04.hs  Capstone05.hs
src/capstone/Capstone06/primes/src/: Primes.hs
src/capstone/Capstone06/primes/test/: Spec.hs
src/yesod/: client_session_key.aes  helloworld.hs
